--- a/src/index.css
+++ b/src/index.css
@@ -1,40 +1,51 @@
-*{
-    margin: 20;
-    padding: 20;
-    box-sizing: border-box;
-};
-
-body{
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background: #f1f5f8;
-    color: #222;
+* {
+  margin: 20;
+  padding: 20;
+  box-sizing: border-box;
 }
 
-.booklist{
-    width: 90vw;
-    max-width: 1170px;
-    margin: 5rem auto;
-    display: grid;
-    gap: 2rem;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  background: #f1f5f8;
+  color: #222;
 }
 
-@media screen and (min-width:768px){
-    .booklist{
-        grid-template-columns: repeat(3, 1fr);
-    }
+.booklist {
+  width: 90vw;
+  max-width: 1170px;
+  margin: 5rem auto;
+  display: grid;
+  gap: 2rem;
 }
 
-.book{
-    background: #fff;
-    border-radius: 1rem;
-    padding: 1rem 2rem;
+@media screen and (min-width: 768px) {
+  .booklist {
+    grid-template-columns: repeat(3, 1fr);
+    align-items: start;
+  }
 }
-.book h1{
-    margin-top: 0.5rem;
+
+.book {
+  background: #fff;
+  border-radius: 1rem;
+  padding: 1rem 2rem;
 }
-.book h4{
-    color: #f17d98;
-    letter-spacing: 5px;
-    font-size:0.75rem;
-    margin-top: 0.25rem;
+.book h1 {
+  margin-top: 0.5rem;
+  margin-bottom: 10px;
+}
+.book h4 {
+  color: #f17d98;
+  letter-spacing: 1px;
+  font-size: 0.75rem;
+  margin-top: 0.25rem;
+  margin-bottom: 5px;
+}
+.book p {
+  margin-top: 0.5rem;
+  font-size: small;
+}
+.book button {
+  margin: 4px;
 }
